--- a/CSS/base.css
+++ b/CSS/base.css
@@ -1,13 +1,14 @@
+/*
 :root {
     --DARK-BACKGROUND: #111111  ;
     --DARK-COLOR: #F0F0F0;
     --LIGHT-BACKGROUND: #F0F0F0;
     --LIGHT-COLOR: #111111;
-}
+}*/
 
 @font-face {
-    font-family: 'AZARET MONO';
-    src: url(../FONT/AZARET-MONO.ttf) format('truetype');
+    font-family: 'Azeret Mono';
+    src: url(../FONT/AzeretMono-VariableFont_wght.ttf) format('truetype');
 }
 
 * {
@@ -15,24 +16,24 @@
     margin: 0;
     box-sizing: border-box;
     user-select: none;
-    font-family: 'AZARET MONO', monospace;
+    font-family: 'Azeret Mono', monospace;
 }
 
 html {
     height: 100%;
     font-size: 16px;
-    background-color: var(--LIGHT-BACKGROUND);
+    background-color: #000000;
+    color: #EEEEEE;
 }
+
 body {
     height: 100%;
-    background-color: var(--LIGHT-BACKGROUND);
-    color: var(--LIGHT-COLOR);
+    background-color: inherit;
+    color: inherit;
 }
 
 a {
     text-decoration: none;
-    font-weight: none;
-    color: blue;
 }
 
 ol {
