--- a/FONT/mobile-text.css
+++ b/FONT/mobile-text.css
@@ -1,33 +1,34 @@
 @media screen and (max-width: 768px) {
     
     h1 {
-        font-size: 1.8rem;
+        font-size: 2.1rem;
         font-weight: 400;
+        font-weight: 700;
     }
 
     h2 {
         font-size: 1.5rem;
-        font-weight: 400;
+        font-weight: 600;
     }
 
     h3 {
-        font-size: 1.4rem;
-        font-weight: 400;
+        font-size: 1.3rem;
+        font-weight: 600;
     }
 
     h4 {
-        font-size: 1.2rem;
-        font-weight: 400;
+        font-size: 1.1rem;
+        font-weight: 600;
     }
 
     h5 {
-        font-size: 1.2rem;
-        font-weight: 400;
+        font-size: 1.1rem;
+        font-weight: 600;
     }
 
     h6 {
-        font-size: 1.2rem;
-        font-weight: 400;
+        font-size: 1.1rem;
+        font-weight: 600;
     }
 
     p {
@@ -36,6 +37,8 @@
 
     a {
         font-size: 1rem;
+        color: inherit;
+        font-weight: none;
     }
 
     li {
